--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
 		"ember-css-modules-sass": "^1.0.1",
 		"ember-data": "~3.3.0",
 		"ember-export-application-global": "^2.0.0",
+		"ember-light-table": "^2.0.0-beta.3",
 		"ember-load-initializers": "^1.1.0",
 		"ember-maybe-import-regenerator": "^0.1.6",
 		"ember-prism": "^0.4.0",
 		"ember-resolver": "^4.0.0",
+		"ember-responsive": "^3.0.5",
 		"ember-source": "~3.3.0",
 		"eslint-plugin-ember": "^5.0.0",
 		"loader.js": "^4.2.3",
