--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist/
+/app/
+/config/
+/public/
+/tests/
 /tmp/
+/vendor/
 
 # dependencies
 /bower_components/
@@ -21,3 +25,18 @@
 /.node_modules.ember-try/
 /bower.json.ember-try
 /package.json.ember-try
+
+# other config files
+/.editorconfig
+/.ember-cli
+/.eslintignore
+/.eslintrc.js
+/.travis.yml
+/.watchmanconfig
+/Dockerfile
+/ember-cli-build.js
+/jsconfig.json
+/package.json
+/README.md
+/testem.js
+/yarn.lock
